--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- Logo -->
             <figure>
               <a href="./index.html">
-                <img class="img-logo" src="images/logo.png" alt="">
+                <img class="img-logo" src="images/logo.png" style="width:250px;height:100px;" alt="">
               </a>
             </figure> <!-- /.text-center -->
 
